<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtPersonal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtPersonal"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rbPersonal"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5" />

            <TextView
                android:id="@+id/numPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtInstalaciones"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtInstalaciones"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rbInstalaciones"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5" />

            <TextView
                android:id="@+id/numInstalaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtServicios"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtServicios"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rbServicios"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5" />

            <TextView
                android:id="@+id/numServicios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtLimpieza"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtLimpieza"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rbLimpieza"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5" />

            <TextView
                android:id="@+id/numLimpieza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtComfort"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtComfort"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rbComfort"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5" />

            <TextView
                android:id="@+id/numComfort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtCalidadPrecio"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtCalidadPrecio"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rbCalidadPrecio"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5" />

            <TextView
                android:id="@+id/numCalidadPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtUbicacion"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/txtUbicacion"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/rbUbicacion"
                style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5" />

            <TextView
                android:id="@+id/numUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:fontFamily="sans-serif-black"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btnNuevaValoracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNuevaValoracion" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>